bin_PROGRAMS = server
server_CXXFLAGS = -Wall -Wextra -O3

server_SOURCES =	\
	main.cc		\
	signals.cc

server_HEADERS =				\
	server.hh				\
	server.hxx				\
	signals.hh				\
	encoding_policy_decimal.hh		\
	encoding_policy_base64.hh		\
	uid_generator_policy_random.hh		\
	uid_generator_policy_sequential.hh	\
	worker.hh				\
	worker.hxx

serverdir = src
